--- a/public/css/style.css
+++ b/public/css/style.css
@@ -138,7 +138,8 @@ p {
 } */
 
 .accordion:after {
-  content: "\25BC";
+  font-family: "Font Awesome 5 Free";
+  content: "\f105";
   margin-right: 20px;
   color: red;
   font-weight: bold;
@@ -146,7 +147,7 @@ p {
   /* margin-left: 5px; */
 }
 .active:after {
-  content: '\25B2';
+  content: '\f107';
 }
 
 .panel {
